# ChangeLog for dev-libs/libffi
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libffi/ChangeLog,v 1.75 2009/09/23 19:15:35 aballier Exp $

  23 Sep 2009; Alexis Ballier <aballier@gentoo.org> libffi-3.0.8.ebuild,
  +files/libffi-3.0.8-fbsd.patch:
  Fix detection and test on FreeBSD and keyword it.

  07 Sep 2009; Raúl Porcel <armin76@gentoo.org> libffi-3.0.8.ebuild:
  arm/ia64/s390/sh stable

  05 Sep 2009; Brent Baude <ranger@gentoo.org> libffi-3.0.8.ebuild:
  Marking libffi-3.0.8 ppc64 for bug 272675

  22 Jul 2009; Tobias Klausmann <klausman@gentoo.org> libffi-3.0.8.ebuild:
  Stable on alpha, bug #272675

  19 Jul 2009; nixnut <nixnut@gentoo.org> libffi-3.0.8.ebuild:
  ppc stable #272673

  18 Jul 2009; Jeroen Roovers <jer@gentoo.org> libffi-3.0.8.ebuild:
  Stable for HPPA (bug #272675).

  11 Jun 2009; Markus Meier <maekke@gentoo.org> libffi-3.0.8.ebuild:
  amd64 stable, bug #272675

  10 Jun 2009; Christian Faulhammer <fauli@gentoo.org> libffi-3.0.8.ebuild:
  stable x86, bug 272675

  05 Jun 2009; Ferris McCormick <fmccor@gentoo.org> libffi-3.0.8.ebuild:
  Sparc stable, part of Bug #272675.

  05 Jun 2009; Samuli Suominen <ssuominen@gentoo.org> libffi-3.0.8.ebuild:
  Block <dev-libs/g-wrap-1.9.11 because they ship a copy of this library.

  04 Jun 2009; Samuli Suominen <ssuominen@gentoo.org> libffi-3.0.8.ebuild:
  Keyword ~ppc/~ppc64 wrt #272046, thanks to Luca Barbato for testing.

  03 Jun 2009; Raúl Porcel <armin76@gentoo.org> libffi-3.0.8.ebuild:
  Add ~arm/~ia64/~s390/~sh wrt #272046

  03 Jun 2009; Samuli Suominen <ssuominen@gentoo.org> libffi-3.0.8.ebuild:
  Keyword ~alpha wrt #272046, thanks to Tobias Klausmann for testing.

  02 Jun 2009; Jeroen Roovers <jer@gentoo.org> libffi-3.0.8.ebuild:
  Marked ~hppa (bug #272046).

  01 Jun 2009; Ferris McCormick <fmccor@gentoo.org> libffi-3.0.8.ebuild:
  Add sparc for testing, part of Bug #272046.
