@@ -1,5 +1,5 @@
 AUX libffi-3.0.8-fbsd.patch 866 RMD160 ac8c5a157bf3faf5d54ef2bab8822cec5656aaef SHA1 d460fd0a55365f0b4befbdb2c2259399dd875e44 SHA256 5c50d84ba3e6312c046efa5ac8bed0c6b9b719ae98196f7841511f62dccb568d
 DIST libffi-3.0.8.tar.gz 722834 RMD160 4144f64e79ebf95161a6afd58ceaeef8372b5e57 SHA1 ce44d10c39d9a37479c8777e206cac0f36c48712 SHA256 2c7c5b88a68fb362262889ba25ef25dc27864b7bbf03547a8a36b8d567569406
-EBUILD libffi-3.0.8.ebuild 1148 RMD160 c019769f2d9f1126f24232d9ca5503210e734739 SHA1 12a75bb35b7c9a85839a8ff638b0a6e51305d199 SHA256 760f585902c7303f4cdc4c51a1c720c07d3d474ede4b7054d96c5fb659810785
-MISC ChangeLog 10612 RMD160 6b4ce13b5d79d6a3220f8e6e22a437ac17182eb5 SHA1 ff17ceb660c256a4defa4f45775172441c4f238c SHA256 c2a15c07a1e3940bbc755dbe4a0a450c98eccfac99b59d1134082077ca556ee2
+EBUILD libffi-3.0.8.ebuild 1177 RMD160 4d35a83832b847b02abafd4548f9a87645557fbb SHA1 13e5ac7ae094d43e2477f589d56269171db8b407 SHA256 9c4255bba7bafa9897690d6625c7c6285cb2920b69a39c503ed808a0587a6fd6
+MISC ChangeLog 10982 RMD160 393c547e297437338a10530b50189484c5e6d9a4 SHA1 75902630cf2e6ae04d30ab1453455c0fba2a2bc6 SHA256 a116de2b44397d1bf7b7bed561e3d31cd2efb975f0d4ed4e4d46e47835aea66c
 MISC metadata.xml 1834 RMD160 4ae38a0125a0d16e2f8eeced99225474ba6a7a01 SHA1 ff8e48fc31017e3206a550b7d833a2e54b5a9041 SHA256 7c023f3a22feee632409f456117fc2339ae8090683a311495b6def4da9ae9fa5
