@@ -1,9 +1,9 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libffi/libffi-3.0.8.ebuild,v 1.17 2009/09/23 19:15:35 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libffi/libffi-3.0.8.ebuild,v 1.18 2009/09/28 15:48:57 ssuominen Exp $
 
 EAPI=2
-inherit eutils autotools
+inherit autotools eutils
 
 DESCRIPTION="a portable, high level programming interface to various calling conventions."
 HOMEPAGE="http://sourceware.org/libffi"
@@ -19,7 +19,7 @@ DEPEND="!<dev-libs/g-wrap-1.9.11
 	test? ( dev-util/dejagnu )"
 
 src_prepare() {
-	epatch "${FILESDIR}/${P}-fbsd.patch"
+	epatch "${FILESDIR}"/${P}-fbsd.patch
 	eautoreconf
 }
 
@@ -31,12 +31,14 @@ src_configure() {
 }
 
 src_install() {
-	emake DESTDIR="${D}" install || die "emake install failed"
+	emake DESTDIR="${D}" install || die
 	dodoc ChangeLog* README TODO
 }
 
 pkg_postinst() {
-	ewarn "Please unset USE flag libffi in sys-devel/gcc. There is no"
-	ewarn "file collision but your package might link to wrong library."
-	ebeep
+	if has_version sys-devel/gcc[libffi]; then
+		ewarn "Please unset USE flag libffi in sys-devel/gcc. There is no"
+		ewarn "file collision but your package might link to wrong library."
+		ebeep
+	fi
 }
