@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/libffi
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libffi/ChangeLog,v 1.75 2009/09/23 19:15:35 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libffi/ChangeLog,v 1.76 2009/09/28 15:48:57 ssuominen Exp $
+
+  28 Sep 2009; Samuli Suominen <ssuominen@gentoo.org> libffi-3.0.8.ebuild:
+  Use has_version to print warning only if sys-devel/gcc is built with USE
+  libffi. This can be made a blocking atom once sparc is done with
+  gnustep-base/gnustep-base and old versions are removed from tree. Thanks
+  to Dirkjan Ochtman and Arfrever Frehtes Taifersar Arahesis in bug 286733.
 
   23 Sep 2009; Alexis Ballier <aballier@gentoo.org> libffi-3.0.8.ebuild,
   +files/libffi-3.0.8-fbsd.patch:
